2008-02-21  Tom Tromey  <tromey@redhat.com>

	* c-gimplify.c (c_gimplify_expr) <VIEW_CONVERT_EXPR>: Update
	assertion.
	* c-decl.c (all_global_decls): New global.
	(pop_scope_internal): New function.
	(pop_scope): Use it.
	(pop_file_scope): Initialize all_global_decls.  Use
	pop_scope_internal.
	(c_clear_binding_stack): Use pop_scope_internal.
	(ext_block): Remove.
	(c_smash_decls): Change type of 'result'.  Remove 'list'
	argument; add 'globals' argument.  Smash field types of records
	and unions.
	(get_smashed_type): Don't smash field types of records and
	unions.
	(hand_off_decls): Walk DECL_ARGUMENTS of function.
	(c_write_global_declarations): Use all_global_decls.
	(c_init_decl_processing): Initialize all_global_decls.
	* c-parser.c (struct can_reuse_hunk_data) <parser>: Remove.
	(traverse_check_statics): New function.
	(can_reuse_hunk): Call traverse_check_statics.

2008-02-18  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_hack_token): Pop timevar in early return.

2008-02-15  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (get_smashed_type): Don't mix declaration with code.
	(duplicate_decls): Apply attributes to new decl.

2008-02-13  Tom Tromey  <tromey@redhat.com>

	* c-parser.c: Include pointer-set.h.
	(c_parser) <smash_map>: Removed.
	(global_smash_map): New global.
	(struct mark_one_hunk_binding_info): Define.
	(mark_one_hunk_binding): Change argument types.  Use
	htab_clear_slot.
	(c_parser_mark_hunk_set): Update.
	(struct smash_value): Define.
	(struct smash_entry) <value>: Change type.
	(c_parser_find_binding): Update.
	(hash_c_tree_map_entry): New function.
	(eq_c_tree_map_entry): Likewise.
	(copy_to_pointer_map): Likewise.
	(c_parser_create_smash_map): Likewise.
	(c_parser_note_smash): Track canonical definition.
	(c_parse_file): Create global_smash_map.
	* c-common.h: Update comment.
	* c-gimplify.c (c_gimplify_expr) <CALL_EXPR, FDESC_EXPR,
	ADDR_EXPR>: Remove cases.
	<VIEW_CONVERT_EXPR>: Handle C_SMASHED_P.